--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="cursor-follower"></div>
-    
     <header class="hero">
         <div class="hero-content">
             <h1 class="hero-title">
@@ -26,7 +24,7 @@
             <div class="hero-meta">
                 <span class="meta-item">5 Projects</span>
                 <span class="meta-divider">•</span>
-                <span class="meta-item">Sept — Oct 2025</span>
+                <span class="meta-item">Sept - Oct 2025</span>
                 <span class="meta-divider">•</span>
                 <span class="meta-item">Web Design Explorations</span>
             </div>
@@ -45,11 +43,10 @@
             <div class="project-number">01</div>
             <div class="project-content">
                 <div class="project-info">
-                    <div class="project-date">September 10, 2025</div>
                     <h2 class="project-title">View Source</h2>
                     <p class="project-description">
                         ASCII art concrete poem about wildlife protection. Features an interactive dragon that 
-                        reveals conservation guidelines on hover—exploring view-source culture through terminal 
+                        reveals conservation guidelines on hover, exploring view-source culture through terminal 
                         aesthetics and creative text rendering.
                     </p>
                     <div class="project-tags">
@@ -86,12 +83,11 @@
             <div class="project-number">02</div>
             <div class="project-content">
                 <div class="project-info">
-                    <div class="project-date">September 17, 2025</div>
                     <h2 class="project-title">&lt;/branding&gt;</h2>
                     <p class="project-description">
                         Critical design piece questioning Cursor as a "visionary" product. Uses Three.js to 
                         create interactive 3D LEGO blocks comparing Cursor (VS Code fork) with AI API logos. 
-                        Raycasting enables click-to-spin blocks and hover commentary—subverting tech marketing.
+                        Raycasting enables click-to-spin blocks and hover commentary, subverting tech marketing.
                     </p>
                     <div class="project-tags">
                         <span class="tag">Three.js</span>
@@ -127,11 +123,10 @@
             <div class="project-number">03</div>
             <div class="project-content">
                 <div class="project-info">
-                    <div class="project-date">September 29, 2025</div>
                     <h2 class="project-title">On the Grid</h2>
                     <p class="project-description">
                         Financial dashboard demonstrating Bootstrap's responsive grid system. Left column: 
-                        company news search. Right: 4 real-time stock charts (AAPL, GOOGL, MSFT, TSLA) using 
+                        company news search. Right: 4 randomized stock charts (AAPL, GOOGL, MSFT, TSLA) using 
                         Chart.js. Shows how grid layouts organize complex data interfaces.
                     </p>
                     <div class="project-tags">
@@ -168,12 +163,11 @@
             <div class="project-number">04</div>
             <div class="project-content">
                 <div class="project-info">
-                    <div class="project-date">October 14, 2025</div>
                     <h2 class="project-title">Usability Test</h2>
                     <p class="project-description">
                         Usability test results dashboard for alphaXiv platform. Presents task completion metrics, 
                         SUS scores, and expandable task breakdowns with screenshots. Uses DOM manipulation for 
-                        collapsible details—demonstrating how to visualize UX research findings.
+                        collapsible details, demonstrating how to visualize UX research findings.
                     </p>
                     <div class="project-tags">
                         <span class="tag">UX Research</span>
@@ -209,10 +203,9 @@
             <div class="project-number">05</div>
             <div class="project-content">
                 <div class="project-info">
-                    <div class="project-date">October 28, 2025</div>
                     <h2 class="project-title">Regenerative</h2>
                     <p class="project-description">
-                        "Pixel Chronicles" — data-driven generative pixel art. Uses geolocation API and current 
+                        "Pixel Chronicles" - data-driven generative pixel art. Uses geolocation API and current 
                         time to display regional landscapes (Northern/Southern/Eastern/Western, Day/Night). 
                         Each visit generates different pixelated scenes based on user's location and time of day.
                     </p>
